--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 "C:\Users\ujwal\OneDrive\Documents\GitHub\151.runtime_error\app\static\vedio\hack.mp4"
 "C:\Users\ujwal\OneDrive\Documents\GitHub\151.runtime_error\app\static\vedios\hack.mp4"
+venv
+__pycache__/
+webcam_recordings/
+processed_videos/
+app/static/processed_videos
