--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ google-generativeai>=0.1.0  # For Google Gemini API integration
 
 # Data Storage and Session Management
 flask-session>=0.4.0 
+tf-keras
